# aistrainer

./: .gitignore  README.md  build.sh  environment-cpu.yml  environment.yml  pyproject.toml
src/aistrainer/: aistrainer.py  models.py
src/aistrainer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
